# AsyncFastAPI-Boilerplate

./: .env.$ENV.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/versions/: bedbd670c13d_init_models.py
app/: main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: __init__.py  auth.py  user.py
app/core/: config.py  security.py
app/crud/: base.py  user.py
app/db/: base_class.py  session.py
app/models/: user.py
app/schemas/: token.py  user.py
app/services/: http.py
app/utils/: backend_pre_start.py  referral_code.py  seeder.py
scripts/: start.sh  wait-for-it.sh
